src/snapshots/afrotd__parser__tests__rule_10.1.6.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 10
  - 1
  - 6
title: Live Ball Fouls – Dead Ball Fouls
text: "\ta) Live Ball Fouls heben keine Dead Ball Fouls auf.\n\tb) Wenn einem Live Ball Foul durch ein Team ein oder mehrere Dead Ball Fouls (inklusive Live Ball Fouls, die als Dead Ball Fouls behandelt werden) des Gegners oder desselben Teams folgen, sind die Strafen einzeln und in der Reihenfolge ihres Geschehens zu ahnden (A.R. 10.1.6.I bis 10.1.6.VI)."
interpretations: []
