src/snapshots/afrotd__parser__tests__rule_10.2.2.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 10
  - 2
  - 2
title: Feststellung des Enforcement Spots und des Basic
text: "Spots\n\ta) Dead Ball Fouls: Der Enforcement Spot für ein Foul, das begangen wurde, wenn der Ball dead ist, ist der Succeeding Spot.\n\tb) Fouls des offensiven Teams hinter der neutralen Zone: Für die nachfolgend aufgeführten Fouls durch das offensive Team hinter der neutralen Zone wird die Strafe vom Previous Spot durchgeführt: illegales Benutzen der Hände, Halten, illegale Blocks, persönliche Fouls und unsportliches Verhalten (Ausnahme: Wenn sich das Foul in Team A’s Endzone ereignet, ist die Strafe ein Safety.). Jedoch müssen auch die Regeln bezüglich Team A-Fouls während Scrimmage Kick-Spielen (Regel 6.3.13) beachtet werden.\n\tc) Das Drei-und-Eins-Prinzip (Regel 2.33.1) ist wie folgt definiert:\n\t\t1. Wenn das ballbesitzende Team ein Foul hinter dem Basic Spot verursacht, wird die Strafe vom Spot of Foul durchgeführt.\n\t\t2. Wenn das ballbesitzende Team ein Foul jenseits des Basic Spots verursacht, wird die Strafe vom Basic Spot durchgeführt.\n\t\t3. Wenn das nicht ballbesitzende Team ein Foul entweder hinter oder jenseits des Basic Spots verursacht, wird die Strafe vom Basic Spot durchgeführt.\n\td) Nachfolgend werden die Basic Spots für die verschiedenen Spielkategorien aufgeführt:\n\t\t1. Laufspiele\n\t\t\ta. Previous Spot, wenn der mit dem Foul verbundene Lauf hinter der neutralen Zone endet.\n\t\t\tb. Ende des mit dem Foul verbundenen Laufes, wenn der mit dem Foul verbundene Lauf jenseits der neutralen Zone endet.\n\t\t\tc. Ende des mit dem Foul verbundenen Laufes bei Laufspielen, die keine neutrale Zone haben.\n\t\t2. Laufspiele, außer bei einem Try, bei denen der Lauf nach einem Wechsel des Team Ballbesitzes in der Endzone endet\n\t\t\ta. Succeeding Spot, wenn sich – nach dem Wechsel eines Team Ballbesitzes in der Endzone – ein Foul ereignet und das Ergebnis des Downs ein Touchback ist.\n\t\t\tb. Goalline, wenn sich – nach dem Wechsel eines Team Ballbesitzes im Spielfeld – ein Foul ereignet und der mit dem Foul verbundene Lauf in der Endzone endet (Ausnahme: Regel 8.5.1.a Ausnahmen).\n\t\t\tc. Goalline, wenn sich – nach dem Wechsel eines Team Ballbesitzes in der Endzone – ein Foul ereignet, der mit dem Foul verbundene Lauf in der Endzone endet und das Ergebnis des Downs kein Touchback ist.\n\t\t3. Pass-Spiele Previous Spot bei legalen Vorwärtspass-Spielen\n\t\t4. Kick-Spiele\n\t\t\ta. Previous Spot bei legalen Kick-Spielen, es sei denn, das Foul wird nach den Postscrimmage Kick Regeln geregelt.\n\t\t\tb. Postscrimmage Kick Spot, wenn das Foul nach den Postscrimmage Kick Regeln geregelt wird.\n\te) Für Team B-Fouls während eines legalen Vorwärtspass-Spieles. Strafen für persönliche Fouls und unsportliche Verhalten Fouls durch Team B werden vom Ende des letzten Laufes geahndet, wenn der Lauf jenseits der neutralen Zone endet und sich während des Downs kein Team Ballbesitzwechsel ereignet hat (Regel 7.3.12) (A.R. 7.3.12.I, 7.3.12.II und 9.1.2.III)."
interpretations: []
