src/snapshots/afrotd__parser__tests__rule_10.2.4.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 10
  - 2
  - 4
title: Fouls durch Team A während Kicks
text: "Strafen für alle Fouls durch das Kicking Team, außer Behinderung beim Fangen eines Kicks (Regel 6.4), während eines Free Kick-Spieles oder eines Scrimmage Kick-Spieles, bei dem der Kick die neutrale Zone überquert (außer Fieldgoalversuche), werden gemäß der Regeln entweder vom Previous Spot als Basic Spot (Ausnahme: die Strafoption für ein Foul in Team A’s Endzone ist ein Safety) mit der Wiederholung des Downs oder von dem Punkt durchgeführt werden, an dem der anschließende Dead Ball zu Team B gehört (Regeln 6.1.8 und 6.3.13)."
interpretations: []
