src/snapshots/afrotd__parser__tests__rule_10.2.6.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 10
  - 2
  - 6
title: Durchführungsprozedur bei der Distanzhalbierung
text: "Keine Distanzstrafe darf die Hälfte der Distanz vom Enforcement Spot zur Goalline des verursachenden Teams überschreiten. Das gilt auch für einen Try von oder innerhalb der 3-Meterlinie.\n\tAusnahmen:\n\t\t1. Defense Passbehinderung bei Scrimmage Downs, außer einem Try (Regel 7.3.8 und 10.2.5.b) und\n\t\t2. Defense Passbehinderung beim Try, wenn der Ball außerhalb der 3-Meterlinie gesnappt wird. Regel 11 Die Schiedsrichter"
interpretations: []
