src/snapshots/afrotd__parser__tests__rule_11.1.1.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 11
  - 1
  - 1
title: Zuständigkeiten
text: Die Zuständigkeit der Schiedsrichter beginnt mit deren Erreichen des Spielortes. Sie endet mit der Übergabe des Spielberichtes an die zuständigen Vertreter des Heimteam-Managements.
interpretations: []
