src/snapshots/afrotd__parser__tests__rule_11.2.1.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 11
  - 2
  - 1
title: Anzahl der Schiedsrichter
text: Das Spiel soll unter der Aufsicht von mindestens vier bis maximal acht Schiedsrichtern stattfinden. Ausnahmefälle werden durch die Bestimmungen der BSO Deutschland gesondert geregelt.
interpretations: []
