src/snapshots/afrotd__parser__tests__rule_11.2.2.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 11
  - 2
  - 2
title: Generelle Verantwortlichkeiten
text: "Die Verantwortlichkeiten, Aufgaben und Mechanics werden in dem jeweils gültigen Mechanicsbuch der AFSVD aufgeführt. Schiedsrichter sind verpflichtet, die im Mechanicsbuch aufgeführte Verhaltensweisen für Schiedsrichter zu kennen und sie entsprechend anzuwenden."
interpretations: []
