src/snapshots/afrotd__parser__tests__rule_2.1.1.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 2
  - 1
  - 1
title: Anerkannte Regelauslegung
text: "\ta) Eine anerkannte Regelauslegung (A.R.) ist eine offizielle Entscheidung, die auf Tatsachen beruht. Sie dient zur Verdeutlichung und Anwendung der Regeln. Die Relation zwischen den Regeln und einer anerkannten Regelauslegung ist analog zur Relation zwischen festgeschriebenem Gesetz und einer Entscheidung des obersten Gerichtshofes.\n\tb) Das Zeichen eines Schiedsrichters (S) richtet sich nach den Schiedsrichter Football-Signalen 1 bis 47."
interpretations: []
